# Risk-Game

./: LICENSE  README.md  Untitled Document  index.html  manage.py  run server
action/: action.py
back-end/: environment_init.json  package-lock.json  server.js
components/gameplay_page/: control_panel.html  game_canvas.html  gameplay_page.html  winner_modal.html
components/start_page/: start_modal.html  start_page.html
data/: game_init.txt
environment/: Encoders.py  Environment.py  GameEnums.py  Structures.py
environment/Tests/: Enums_test.py  Enviroment_test.py
game_server/: controllers.py  settings.py  urls.py  views.py
logic/: app_controller.js  controller.js  environment_variables.js  gameplay_controller.js
logic/libs/visjs/: vis.min.css
logic/pages/: gameplay_page.js  start_page.js
players/: agents.py  ai.py  humans.py  player.py  pruners.py  state.py
players/Tests/: player_tests.py
python/environment/: Environment.py  GameEnums.py
python/environment/Tests/: Enums_test.py  population_init.txt
server/: create server project  installing django
server/game_server/: db.sqlite3
server/game_server/game_server/: settings.py  urls.py  views.py  wsgi.py
server/game_server/templates/: home.html  index.html
server_files/: map_init.txt  population_init.txt
src/: main.cpp
src/game_controller/: game_controller.cpp  game_controller.h
src/game_controller/environment/: container.h  data_structures.h  environment.cpp  environment.h
src/game_controller/player/: player.cpp  player.h  player_factory.cpp  player_factory.h
src/game_controller/player/agents/intelligent_agents/: greedy_agent.cpp  greedy_agent.h
src/game_controller/player/agents/simple_agents/: aggressive_agent.cpp  pacifist_agent.h  passive_agent.cpp  passive_agent.h
src/game_controller/player/humans/: human.cpp  human.h
src/game_controller/utilities/: file_parser.cpp  file_parser.h  io_handler.cpp  io_handler.h  map_file_parser.cpp  population_file_parser.cpp  test.cpp
src/game_engine/environment/: environment.cpp  environment.h
src/game_engine/player/: player.cpp  player.h  player_factory.h
src/game_engine/player/agents/intelligent_agents/: greedy_agent.h
src/game_engine/player/agents/simple_agents/: passive_agent.h  (+3 more)
src/game_engine/player/humans/: human.h
src/game_engine/utilities/: map_file_parser.h  population_file_parser.h
src/graphics_controller/: graphics_controller.cpp
src/graphics_controller/cli_controller/: game_set_visualizer.cpp  game_set_visualizer.h
src/graphics_engine/cli_engine/: cli_engine.cpp  cli_engine.h
src/graphics_engine/cli_engine/utilities/: gameset_visualizer.cpp  gameset_visualizer.h
src/graphics_engine/gui_engine/: gui_engine.cpp  gui_engine.h
static/logic/: app_controller.js  environment_variables.js  gameplay_controller.js
static/logic/pages/: gameplay_page.js  start_page.js
stylesheet/: styles.css
stylesheet/libs/: w3.css
templates/: 404.html  game.html  home.html  index.html
templates/home/components/gameplay_page/: control_panel.html  game_canvas.html  gameplay_page.html  winner_modal.html
templates/home/components/start_page/: start_modal.html  start_page.html
templates/js/: logic.js
tests/game_controller/agents/: CMakeLists.txt  game  test.cpp
tests/game_controller/environment/: CMakeLists.txt  game  test.cpp
tests/game_controller/game_controller/: CMakeLists.txt  game  test.cpp
tests/game_controller/pop_file_parser/: CMakeLists.txt  test.cpp
tests/game_controller/utilities/: CMakeLists.txt  game  game_init.txt  test.cpp
tests/game_engine/environment/: CMakeLists.txt  game  test.cpp
tests/game_engine/io_handler/: CMakeLists.txt  game  test.cpp
tests/game_engine/map_file_parser/: CMakeLists.txt  game  test.cpp
tests/game_engine/pop_file_parser/: CMakeLists.txt  game  test.cpp
tests/graphics_controller/cli_controller/: CMakeLists.txt  game  test.cpp
tests/graphics_engine/cli_engine/cli_engine/: CMakeLists.txt  game  population_init.txt  test.cpp
tests/graphics_engine/cli_engine/gameset_visualizer/: CMakeLists.txt  game  test.cpp
utilities/: IoHandler.py  Parser.py
utilities/Tests/: IoHandler_Test.py  Parser_Test.py  population_init.txt  read_test
